PROJECT(dabba C)

# States that CMake required version must be >= 2.6
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
# Activate this when you want to build a shared lib out the the lib/ directory
# Bear in mind that no profiling will be available on 64-bit arch when on
# SET(BUILD_SHARED_LIBS ON)

FIND_PACKAGE(Threads REQUIRED)

IF(CMAKE_HAVE_PTHREAD_CREATE)
	SET(LIBS ${LIBS} ${CMAKE_THREAD_LIBS_INIT})
ELSE(CMAKE_HAVE_PTHREAD_CREATE)
	MESSAGE(FATAL_ERROR "The framework only supports pthread")
ENDIF(CMAKE_HAVE_PTHREAD_CREATE)

SET(CPACK_GENERATOR "TGZ;DEB")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Multithreaded zero-copy network tools")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.11.3-3), libcap2 (>= 1:2.22-1.1)")
SET(CPACK_PACKAGE_VENDOR "Emmanuel Roullit")
SET(CPACK_PACKAGE_CONTACT "${CPACK_PACKAGE_VENDOR} <emmanuel.roullit@gmail.com>")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/postinst")

INCLUDE(CPack)
INCLUDE(CheckBPFAttach)
INCLUDE(CheckPFPacket)
INCLUDE(CheckStrictAlign)
INCLUDE(CheckTxRing)

ADD_DEFINITIONS(
	-W
	-Wextra
	-Wall
	-Werror
	-std=gnu99
	-O2
	-D_REENTRANT
	-D_FORTIFY_SOURCE=2
	-D_FILE_OFFSET_BITS=64
	-fstack-protector
)

# Only strip executable on release
SET(CMAKE_C_FLAGS_RELEASE "-s")

IF(CMAKE_C_COMPILER_ID STREQUAL GNU)
	ADD_DEFINITIONS(
		-pedantic
		-pedantic-errors
		-z relo
		-pie
	)
ENDIF(CMAKE_C_COMPILER_ID STREQUAL GNU)

IF (CMAKE_BUILD_TYPE STREQUAL profile)
	ADD_DEFINITIONS(-g -pg)
ENDIF (CMAKE_BUILD_TYPE STREQUAL profile)

ENABLE_TESTING()

ADD_CUSTOM_TARGET(setcap)
ADD_CUSTOM_TARGET(doc)

ADD_SUBDIRECTORY(libdabba)
ADD_SUBDIRECTORY(dabbad)
ADD_SUBDIRECTORY(dabba)
