PROJECT(dabbad C)

FIND_PACKAGE(Doxygen)
FIND_PACKAGE(Setcap REQUIRED)

FILE(GLOB DABBAD_HDRS ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include/${PROJECT_NAME}/*.h)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include
                        ${CMAKE_SOURCE_DIR}/libdabba/include)

IF(DOXYGEN_FOUND)
	CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
	ADD_CUSTOM_TARGET(${PROJECT_NAME}-doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	ADD_DEPENDENCIES(doc ${PROJECT_NAME}-doc)
ENDIF(DOXYGEN_FOUND)

ADD_EXECUTABLE(${PROJECT_NAME} dabbad.c list.c ipc.c help.c capture.c misc.c)

TARGET_LINK_LIBRARIES (${PROJECT_NAME} libdabba ${CMAKE_THREAD_LIBS_INIT})

INSTALL(FILES ${DABBAD_HDRS} DESTINATION /usr/local/include/dabbad)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION /usr/sbin)
INSTALL(CODE "EXECUTE_PROCESS(COMMAND ${SETCAP_EXECUTABLE} cap_net_raw,cap_ipc_lock,cap_net_admin=eip /usr/sbin/${PROJECT_NAME})")

ADD_CUSTOM_TARGET(${PROJECT_NAME}-setcap COMMAND ${SETCAP_EXECUTABLE} cap_net_raw,cap_ipc_lock,cap_net_admin=eip ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
ADD_DEPENDENCIES(setcap ${PROJECT_NAME}-setcap)
