PROJECT(libdabba-rpc C)

FIND_PACKAGE(ProtobufC REQUIRED)

INCLUDE(FindDebArch)

SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_GENERATOR "TGZ;DEB;RPM")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CPACK_RESOURCE_FILE_README}")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "3")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(CPACK_PACKAGE_NAME "${PROJECT_NAME}${CPACK_PACKAGE_VERSION}")
SET(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}_${CPACK_PACKAGE_VERSION}_orig")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libprotobuf-c0, protobuf-c-compiler")
SET(CPACK_PACKAGE_VENDOR "Emmanuel Roullit")
SET(CPACK_PACKAGE_CONTACT "${CPACK_PACKAGE_VENDOR} <emmanuel.roullit@gmail.com>")
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/debian/postinst;${CMAKE_SOURCE_DIR}/debian/shlibs")
SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION
" - libdabba-rpc - protobuf-based rpc library for dabbad and dabba"
)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Protobuf RPC library to communicate with dabbad.")
SET(CPACK_PACKAGE_DESCRIPTION "Protobuf RPC library to communicate with dabbad via unix domain or tcp sockets.")
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
SET(CPACK_DEBIAN_PACKAGE_SECTION "net")
SET(CPACK_STRIP_FILES ON)
SET(CPACK_SOURCE_IGNORE_FILES "/build/;/.git/;/.gitignore;/*.swp;~$;${CPACK_SOURCE_IGNORE_FILES}")
SET(CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_CURRENT_BINARY_DIR}" "${PROJECT_NAME}" "ALL" "*")
SET(CPACK_OUTPUT_CONFIG_FILE "CPack-config-${PROJECT_NAME}.cmake")

INCLUDE(CPack)

SET(LIBDABBA_RPC_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
SET(LIBDABBA_RPC_GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME})

FILE(MAKE_DIRECTORY ${LIBDABBA_RPC_GEN_DIR})

INCLUDE_DIRECTORIES(${PROTOBUFC_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBDABBA_RPC_GEN_DIR})

PROTOBUFC_GENERATE_C(PROTO_SRCS PROTO_HDRS ${LIBDABBA_RPC_GEN_DIR} dabba.proto)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROTO_SRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION "${CPACK_PACKAGE_VERSION}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION "${CPACK_PACKAGE_VERSION}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROTOBUFC_LIBRARY})

INSTALL(FILES ${PROTO_HDRS} DESTINATION include/${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
