PROJECT(libdabba-rpc C)

FIND_PACKAGE(ProtobufC REQUIRED)

SET(LIBDABBA_RPC_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
SET(LIBDABBA_RPC_GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME})

FILE(MAKE_DIRECTORY ${LIBDABBA_RPC_GEN_DIR})

INCLUDE_DIRECTORIES(${PROTOBUFC_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBDABBA_RPC_GEN_DIR})

PROTOBUFC_GENERATE_C(PROTO_SRCS PROTO_HDRS ${LIBDABBA_RPC_GEN_DIR} dabba.proto)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROTO_SRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION "${CPACK_PACKAGE_VERSION}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION "${CPACK_PACKAGE_VERSION}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROTOBUFC_LIBRARY})

IF(CMAKE_BUILD_TYPE MATCHES "release")
	INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib NAMELINK_SKIP)
ELSE(CMAKE_BUILD_TYPE MATCHES "release")
	INSTALL(FILES ${PROTO_HDRS} DESTINATION include/${PROJECT_NAME})
	INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
ENDIF(CMAKE_BUILD_TYPE MATCHES "release")
