PROJECT(libdabba C)

FIND_PACKAGE(Doxygen)
FIND_PACKAGE(Setcap REQUIRED)

FILE(GLOB DABBACORE_HDRS ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include/${PROJECT_NAME}/*.h)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include)

ADD_SUBDIRECTORY(tests)

IF(DOXYGEN_FOUND)
	CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
	ADD_CUSTOM_TARGET(${PROJECT_NAME}-doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	ADD_DEPENDENCIES(doc ${PROJECT_NAME}-doc)
ENDIF(DOXYGEN_FOUND)

ADD_LIBRARY(${PROJECT_NAME} SHARED packet-mmap.c interface.c pcap.c sock-filter.c packet-rx.c packet-tx.c)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION "${CPACK_PACKAGE_VERSION}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION "${CPACK_PACKAGE_VERSION}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

INSTALL(FILES ${DABBACORE_HDRS} DESTINATION include/${PROJECT_NAME} COMPONENT headers)
INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib LIBRARY DESTINATION lib COMPONENT libraries NAMELINK_SKIP)
